--- a/src/intro.html
+++ b/src/intro.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="intro.css">
+    
     <title>React Basic App</title>
 </head>
 <body>
     <div id="root"></div>
-    <script src="index.js"></script>
+    <script src="index.jsx"></script>
 </body>
 </html>
